# docs/swagger.yaml
@@ -35,10 +35,62 @@ definitions:
         description: 对象的⼤⼩（字节）
         type: integer
     type: object
+  types.ObjectMetadata:
+    properties:
+      bucket_name:
+        description: 对象所属的桶名称
+        type: string
+      content_type:
+        description: 对象的内容类型
+        type: string
+      e_tag:
+        description: 对象的 ETag （通常是内容的 MD5 哈希）
+        type: string
+      is_latest:
+        description: 是否是最新版本
+        type: boolean
+      last_modified:
+        description: 对象最后修改时间
+        type: string
+      object_name:
+        description: 对象的名称
+        type: string
+      size:
+        description: 对象的⼤⼩（字节）
+        type: integer
+      storage_nodes:
+        description: 存储该对象的节点列表
+        items:
+          type: string
+        type: array
+      version_id:
+        description: 对象的版本 ID （如果启⽤了版本控制）
+        type: string
+    type: object
 info:
   contact: {}
 paths:
   /metadata/:name:
+    delete:
+      consumes:
+      - application/json
+      description: 根据 name 删除Bucket
+      parameters:
+      - description: Bucket名字
+        in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      summary: 删除Bucket
+      tags:
+      - metadata
     post:
       consumes:
       - application/json
@@ -87,6 +139,30 @@ paths:
       summary: 获取Bucket列表
       tags:
       - metadata
+  /metadata/object:
+    get:
+      consumes:
+      - application/json
+      description: 根据 bucket_name 和 object_name 查询对象元数据信息
+      parameters:
+      - in: query
+        name: bucket_name
+        type: string
+      - in: query
+        name: object_name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.ObjectMetadata'
+        "400":
+          description: Bad Request
+      summary: 获取对象元数据信息
+      tags:
+      - metadata
   /metadata/object/list:
     get:
       consumes:
@@ -120,4 +196,83 @@ paths:
       summary: 获取对象元数据列表
       tags:
       - metadata
+  /storage:
+    delete:
+      consumes:
+      - application/json
+      description: 根据 bucket_name 和object_name 删除文件
+      parameters:
+      - in: query
+        name: bucket_name
+        type: string
+      - in: query
+        name: object_name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      summary: 删除文件
+      tags:
+      - storage
+  /storage/object:
+    get:
+      consumes:
+      - application/json
+      description: 根据 bucket_name 和 object_name 查询文件信息
+      parameters:
+      - in: query
+        name: bucket_name
+        type: string
+      - in: query
+        name: object_name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回上传的文件信息
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+      summary: 获取文件信息
+      tags:
+      - storage
+  /storage/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: 根据 bucket_name 和 object_name 上传文件
+      parameters:
+      - description: Bucket Name
+        in: formData
+        name: bucket_name
+        required: true
+        type: string
+      - description: Object Name
+        in: formData
+        name: object_name
+        required: true
+        type: string
+      - description: File to upload
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功返回上传的文件ETag
+          schema:
+            type: string
+        "400":
+          description: 错误响应
+      summary: 上传文件
+      tags:
+      - storage
 swagger: "2.0"
